app nav fix dark mode

--- a/component-library/src/components/custom/BccAppNavigation/BccAppNavigation.css
+++ b/component-library/src/components/custom/BccAppNavigation/BccAppNavigation.css
@@ -21,7 +21,7 @@
 			0px 4px 6px -2px rgba(16, 24, 40, 0.05),
 			0px 12px 16px -4px rgba(16, 24, 40, 0.1);
 	}
-	.dark .bcc-app-nav {
+	.dark .bcc-app-nav .bcc-app-nav-container {
 		@apply backdrop-blur-sm;
 		background: transparent;
 		box-shadow: none;
